Enhance layout and responsiveness: update CSS styles, modify HTML structure, and add web.config for Angular routing

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -3,7 +3,7 @@
   "SUBTITLE": "البيئة القانونية السعودية",
   "USER_NAME": "أحمد القحطاني",
   "USER_ROLE": "محترف",
-  "GLOBE": "English",
+  "GLOBE": "العربية",
   "HOME_TITLE": "مرحبا بكم في المساعد القانوني الذكي",
   "HOME_DESC": "مدعوم بالذكاء الاصطناعي لمساعدة المحامين والطلاب والمواطنين على التنقل في القانون السعودي",
   "SEARCH_PLACEHOLDER": "...اطرح سؤالًا قانونيًا أو ابحث في الأنظمة",
