--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -3,7 +3,7 @@
   "SUBTITLE": "Saudi Legal Environment",
   "USER_NAME": "Ahmad Al-Qahtani",
   "USER_ROLE": "Professional",
-  "GLOBE": "العربية",
+  "GLOBE": "English",
   "HOME_TITLE": "AI Legal Assistant",
   "HOME_DESC": "Powered by AI to help legal professionals, students, and citizens navigate Saudi law",
   "SEARCH_PLACEHOLDER": "Ask a legal question or search in regulations...",
